<resources>
    <string name="app_name">DemoCaculator</string>
    <string name="ac">AC</string>
    <string name="bracket">()</string>
    <string name="per_cent">%</string>
    <string name="div">/</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="mul">X</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="sub">-</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="add">+</string>
    <string name="dot">.</string>
    <string name="zero">0</string>
    <string name="type">+/-</string>
    <string name="equal">=</string>
</resources>
